--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Brunch</title>
+  <title>Tetris</title>
+
   <link rel="stylesheet" href="/app.css">
   <script src="/app.js"></script>
-  <script>require("main");</script>
 </head>
+
 <body>
-  <div class="brunch">
-    <a href="http://brunch.io"><img src="http://brunch.io/images/logo.png" alt="Brunch"></a>
-    <p>Bon Appétit.</p>
-  </div>
+  <div id="game"></div>
 </body>
